--- a/sprout/styles/gallery.css
+++ b/sprout/styles/gallery.css
@@ -1,7 +1,7 @@
 body {
     background-color: #272822;
     color: #e6e5e2;
-    font-size: 20px;
+    font-size: large;
     text-align: center;
 }
 
@@ -15,6 +15,6 @@ a {
 }
 
 .thumbnail {
-    padding: 10px;
+    padding: 8px;
 }
 
